--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-is": "^18.2.0",
     "styled-components": "^5.3.6",
     "swiper": "^9.1.0"
   },
